--- a/admin/src/style/Login.css
+++ b/admin/src/style/Login.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 100vh;
     background-color: #f5f5f5;
-    background-image: url('../image/bg.jpg');
+    background-image: url('../../public/images/bg.jpg');
     background-size: cover;
 }
 
