the upload and download excel done (Test Case ready)

--- a/admin/src/page/User/index/index.css
+++ b/admin/src/page/User/index/index.css
@@ -1,4 +1,4 @@
-#form{
+#userForm{
     padding: 10px;
     border: 1px solid #a7a7a7;
     border-radius: 5px;
@@ -6,10 +6,4 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 10px;
     width: 100%;
-}
-
-#table{
-    margin: 10px;
-    border-collapse: collapse;
-    height: auto;
 }
