--- a/admin/src/page/Manage/manageCustomization/info/index.css
+++ b/admin/src/page/Manage/manageCustomization/info/index.css
@@ -1,6 +1,59 @@
-#optionBasicInfo{
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    border: 2px solid #000000;
+#optionBasicInfo {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #000000;
+}
+
+#optionDetail {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #000000;
+}
+
+#btnSubmit {
+  padding: 10px 20px;
+  margin-left: 1%;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+  float: right;
+}
+
+#btnReset {
+  padding: 10px 20px;
+  margin-left: 1%;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+  float: right;
+}
+
+#btnAdd {
+  padding: 10px 20px;
+  margin-left: 1%;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+  float: left;
+}
+
+#btnCancel {
+  padding: 10px 20px;
+  margin-left: 1%;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
+  float: left;
+}
+
+#btnDelete {
+  padding: 10px 20px;
+  margin-left: 1%;
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: bold;
 }
