database sql update

--- a/admin/src/page/Manage/manageDishesType/index/index.css
+++ b/admin/src/page/Manage/manageDishesType/index/index.css
@@ -1,4 +1,6 @@
-#userInfoForm {
+#dishTypeTable {
+  margin-top: 1%;
+  margin-bottom: 1%;
   background-color: white;
   padding: 20px;
   border-radius: 10px;
