--- a/admin/src/page/User/index/index.css
+++ b/admin/src/page/User/index/index.css
@@ -1,9 +1,19 @@
-#userForm{
-    padding: 10px;
-    border: 1px solid #a7a7a7;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    width: 100%;
+#userForm {
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #000000;
+}
+
+#userTable {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #000000;
 }
